# honours-project

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  ProjectConfig.cmake.inc  README.md  appveyor.yml
CMake/: DownloadFile.cmake  File2Code.cmake  HashCracker-Config.cmake  HashCrackerConfig.cmake  HonoursProject-Config.cmake  HonoursProjectConfig.cmake  cl2cpp.cmake
CMake/ExternalProjects/: Docopt.cmake  OpenCL.cmake
CMake/Modules/: FindOpenCL.cmake
HashApp/: CMakeLists.txt
HashApp/Include/: ConsoleInput.hpp  Program.hpp
HashApp/Source/: ConsoleInput.cpp  Main.cpp  Program.cpp
HashCrack/: CMakeLists.txt  Config.cmake.inc
HashCrack/Include/Core/: Charset.hpp  HashCracker.hpp  Platform.hpp
HashCrack/Include/OpenCL/: Device.hpp  DeviceMemory.hpp  Kernel.hpp  KernelBuffer.hpp  KernelParam.hpp  Program.hpp
HashCrack/Include/Tasks/: AttackTask.hpp  AutotuneTask.hpp  BruteforceAttackTask.hpp  BruteforceSetupTask.hpp  HashCrackerTask.hpp  SetupTask.hpp  Task.hpp  WorkDispatchTask.hpp
HashCrack/OpenCL/: bruteforce_md5.cl  gen_word.cl  inc_comp.cl  inc_hash_func.cl  inc_types.cl
HashCrack/Source/Core/: Charset.cpp  HashCracker.cpp  Platform.cpp
HashCrack/Source/OpenCL/: Device.cpp  DeviceMemory.cpp  Kernel.cpp  KernelBuffer.cpp  KernelParam.cpp  Program.cpp
HashCrack/Source/Tasks/: AttackTask.cpp  AutotuneTask.cpp  BruteforceAttackTask.cpp  BruteforceSetupTask.cpp  Task.cpp  WorkDispatchTask.cpp
HashCracker/: CMakeLists.txt  Config.cmake.inc
HashCracker/Include/: HashCracker.hpp
HashCracker/Include/Core/: AttackDispatch.hpp  AttackFactory.hpp  Charset.hpp  HashCracker.hpp  HashFactory.hpp  HashFunc.hpp  Logger.hpp  MessageMask.hpp  Platform.hpp
HashCracker/Include/OpenCL/: Device.hpp  DeviceMemory.hpp  Kernel.hpp  KernelBuffer.hpp  KernelParam.hpp  Program.hpp
HashCracker/Include/Tasks/: AttackTask.hpp  AutotuneTask.hpp  BruteforceAttackTask.hpp  BruteforceKernelTask.hpp  BruteforceSetupTask.hpp  CrackerTask.hpp  KernelTask.hpp  SetupTask.hpp  Task.hpp  WorkDispatchTask.hpp
HashCracker/Include/Tasks/Bruteforce/: BruteforceAttackTask.hpp  BruteforceKernelTask.hpp  BruteforceSetupTask.hpp
HashCracker/OpenCL/: bruteforce_md5.cl  inc_hash_comp.cl  inc_hash_const.cl  inc_types.cl
HashCracker/Source/Core/: AttackDispatch.cpp  AttackFactory.cpp  Charset.cpp  HashCracker.cpp  HashFactory.cpp  HashFunc.cpp  Logger.cpp  MessageMask.cpp  Platform.cpp
HashCracker/Source/OpenCL/: Device.cpp  DeviceMemory.cpp  Kernel.cpp  KernelBuffer.cpp  KernelParam.cpp  Logger.cpp  Program.cpp
HashCracker/Source/Tasks/: AttackTask.cpp  AutotuneTask.cpp  BruteforceAttackTask.cpp  BruteforceKernelTask.cpp  BruteforceSetupTask.cpp  CrackerTask.cpp  HashCrackerTask.cpp  KernelTask.cpp  SetupTask.cpp  Task.cpp  WorkDispatchTask.cpp
HashCracker/Source/Tasks/Bruteforce/: BruteforceAttackTask.cpp  BruteforceKernelTask.cpp  BruteforceSetupTask.cpp
PasswordRecovery/: CMakeLists.txt
PasswordRecovery/Include/: ConsoleInput.hpp  Main.hpp  Program.hpp
PasswordRecovery/Source/: ConsoleInput.cpp  Main.cpp  Program.cpp
